--- a/css/index.html
+++ b/css/index.html
@@ -12,7 +12,82 @@
     <meta name="keywords" content="html5, tecnologia">
 </head>
 
+<style>
+    body {
+        margin: 50px;
+    }
+
+    p {
+        background-color: blue;
+        color: white;
+    }
+
+
+    div {
+        background-color: aqua;
+        color: brown;
+    }
+
+    .parg-color {
+        background-color: aquamarine;
+    }
+
+    .parg-font {
+        color: black;
+    }
+
+    .model-box {
+        padding: 20px;
+        border: 10px;
+        border-style: solid;
+        border-color: rgb(98, 17, 28);
+        margin: 50px;
+    }
+</style>
+
 <body>
+
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, et! Voluptates, a. Vitae voluptatem ratione
+        laborum, ex hic labore! Incidunt, tenetur laborum! Veritatis nemo pariatur ad dolore, magni aliquid ipsam!
+    </p>
+
+    <p class="parg-color parg-font">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero perferendis cum nesciunt voluptatem, possimus
+        officiis mollitia facilis ex molestiae eius alias blanditiis corporis et, accusantium nemo repellendus! Nisi,
+        dolor nulla?
+    </p>
+
+    <div class="parg-color parg-font">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo modi sequi officia, eligendi atque iusto quasi
+        nihil eius sunt quod praesentium! Quod cumque dolor delectus ut possimus maiores perspiciatis beatae.
+    </div>
+
+    <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto deserunt explicabo rerum odit dolore
+        pariatur vitae doloribus. Doloremque nam similique harum ipsum iusto suscipit? Assumenda quo tempora id nulla
+        totam.
+
+        <section>
+            section
+        </section>
+    </div>
+    <div>
+        <p class="model-box">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero perferendis cum nesciunt voluptatem,
+            possimus
+            officiis mollitia facilis ex molestiae eius alias blanditiis corporis et, accusantium nemo repellendus!
+            Nisi,
+            dolor nulla?
+        </p>
+    </div>
+
+    <footer style="background-color: blue; color: white;">
+
+        Footer
+
+    </footer>
+
 
 </body>
 
