--- a/formulario/cadastro.html
+++ b/formulario/cadastro.html
@@ -23,6 +23,11 @@
                 <label for="txtbusca">Nome</label>
                 <input type="text" required maxlength="10" placeholder="Informe seu nome">
             </div>
+
+            <div>
+                <label for="txtbusca">Fone</label>
+                <input type="tel" placeholder="Informe seu telefone">
+            </div>
             <div>
                 <label for="txtIdade">idade</label>
                 <input type="number" min="0" max="50" step="5" id="txtIdade">
