--- a/projeto/index.html
+++ b/projeto/index.html
@@ -14,6 +14,28 @@
 
 </head>
 
+<script>
+
+    $(function () {
+        $("#btnSalvar").click(function () {
+
+            var contato = {
+                nome: $('#txtNome').val(),
+                idade: $('#txtIdade').val()
+            }
+
+
+            localStorage.setItem('contatos', JSON.stringify(contato))
+
+            $('input').val('')
+            $('#txtNome').focus()
+
+        });
+    });
+
+</script>
+
+
 <body>
 
     <div class="container">
@@ -25,13 +47,18 @@
 
                 <div class="panel-body">
 
-                    <div class="col-xs-12 col-md-6 col-lg-10">
-                        <label>Nome</label>
-                        <input type="text" class="form-control">
+                    <div class="col-xs-12 col-md-6 col-lg-8">
+                        <label for="txtNome">Nome</label>
+                        <input id="txtNome" type="text" class="form-control">
                     </div>
-                    <div class="col-xs-12 col-md-6 col-lg-2">
-                        <label>Idade</label>
-                        <input type="text" class="form-control">
+                    <div class="col-xs-12 col-md-3 col-lg-2">
+                        <label for="txtIdade">Idade</label>
+                        <input id="txtIdade" type="text" class="form-control">
+                    </div>
+
+                    <div class="col-xs-12 col-md-3 col-lg-2">
+                        <br>
+                        <button id="btnSalvar" type="button" class="btn btn-primary">Salvar</button>
                     </div>
                 </div>
 
