--- a/projeto/index.html
+++ b/projeto/index.html
@@ -16,22 +16,94 @@
 
 <script>
 
+    var registro = -1
+
     $(function () {
+
+        listar()
+
         $("#btnSalvar").click(function () {
+
 
             var contato = {
                 nome: $('#txtNome').val(),
                 idade: $('#txtIdade').val()
             }
 
+            var contatos = JSON.parse(localStorage.getItem('contatos'))
 
-            localStorage.setItem('contatos', JSON.stringify(contato))
+            if (contatos == null) {
+                contatos = []
+            }
+
+            if (registro > -1) {
+
+                contatos[registro] = {
+                    nome: $('#txtNome').val(),
+                    idade: $('#txtIdade').val()
+                }
+            }
+            else {
+                contatos.push(contato)
+            }
+
+            localStorage.setItem('contatos', JSON.stringify(contatos))
 
             $('input').val('')
             $('#txtNome').focus()
 
+            registro = -1
+
+            listar();
+
         });
+
+        $(document).on('click', '#btnEditar', function () {
+
+            let posicao = $(this).attr("alt")
+
+            registro = posicao
+
+            let contatos = JSON.parse(localStorage.getItem('contatos'))
+
+            let contato = contatos[posicao]
+
+            $('#txtNome').val(contato.nome)
+            $('#txtIdade').val(contato.idade)          
+
+        })
+
     });
+
+
+    function listar() {
+
+        $('#tblContatos tr:not(:first)').remove();
+
+        var contatos = JSON.parse(localStorage.getItem('contatos'))
+
+        for (let posicao in contatos) {
+
+
+            let contato = contatos[posicao]
+
+            console.log(contato)
+
+
+            // let colunaNome = '<td>' + contato.nome + '</td>'
+            // let colunaIdade = '<td>' + contato.idade + '</td>'
+            // let colunaAcoes = '<td></td>'
+            // let linha = '<tr>' + colunaNome + colunaIdade + colunaAcoes + '</tr>'
+
+
+            $('#tblContatos tr:last').after('<tr><td>' + contato.nome + '</td><td>' +
+                contato.idade + '</td><td>' +
+                '<button id="btnEditar" alt="' + posicao + '" class="btn btn-info btn-sm">Editar</button>' +
+                '</td></tr>');
+
+        }
+
+    }
 
 </script>
 
@@ -60,10 +132,22 @@
                         <br>
                         <button id="btnSalvar" type="button" class="btn btn-primary">Salvar</button>
                     </div>
+                    <br>
+                    <hr>
+                    <table id="tblContatos" class="table table-striped table-responsive table-hover">
+                        <tbody>
+                            <th>Nome</th>
+                            <th>Idade</th>
+                            <th>Ações</th>
+                            <!-- <th colspan="2" align="center">Ações</th> -->
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
-
             </div>
+
         </div>
+    </div>
     </div>
 </body>
 
